--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <h1>{{title}}</h1>
 <hr>
-<h3>counter: {{counter}}</h3>
-<button (click)="increaseBy(+1)">+1</button>
-<button (click)="increaseBy(-1)">-1</button>
-<button (click)="reset()">Reset</button>
 
-<app-counter></app-counter>
+
+<app-heroes-hero></app-heroes-hero>
+<app-heroes-list></app-heroes-list>
+<!---- <app-counter></app-counter> -->
