--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -5,18 +5,21 @@
       let isFirst=first;
       let isLast=last;
       let isEven=even"
-
-      class="list-group-item"
+      class="list-group-item d-flex justify-content-between align-items-center"
       [ngClass]="{
       'list-group-item-dark': isLast,
       'list-group-item-success': isEven,
     }">
-      <span class="text-primary">{{i+1}}. </span>
+      <div>
+        <span class="text-primary">{{i+1}}. </span>
       <span>{{character.name}} - </span>
       <strong>Power:</strong>
       <span>{{character.power}} </span>
       <span>Es el primero: {{isFirst}} </span>
       <span>Es el ultimo: {{isLast }}</span>
+      </div>
+
+      <button (click)="onDeleteCharacter(i)" class="btn btn-danger">X</button>
     </li>
 
     </ul>
