--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -19,7 +19,10 @@
       <span>Es el ultimo: {{isLast }}</span>
       </div>
 
-      <button (click)="onDeleteCharacter(i)" class="btn btn-danger">X</button>
+      <div>
+      <button (click)="onDeleteCharacter(character.id)" class="btn btn-danger">X</button>
+      <button (click)="updateCharacter(character)" class="btn btn-warning">U</button>
+    </div>
     </li>
 
     </ul>
